// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> Should render inline Link at the end of a Text 1`] = `
"%PDF-1.3
%����
6 0 obj
<<
/Type /ExtGState
/ca 1
>>
endobj
8 0 obj
<<
/S /URI
/URI (http://www.github.com/diegomura/react-pdf)
>>
endobj
9 0 obj
<<
/Subtype /Link
/A 8 0 R
/Type /Annot
/Rect [217.062 825.24 244.062 841.89]
/Border [0 0 0]
>>
endobj
10 0 obj
<<
/Type /ExtGState
/CA 1
>>
endobj
5 0 obj
<<
/Type /Page
/Parent 1 0 R
/MediaBox [0 0 595.28 841.89]
/Contents 3 0 R
/Resources 4 0 R
/Annots [9 0 R]
>>
endobj
4 0 obj
<<
/ProcSet [/PDF /Text /ImageB /ImageC /ImageI]
/ExtGState <<
/Gs1 6 0 R
/Gs2 10 0 R
>>
/Font <<
/F1 7 0 R
>>
>>
endobj
11 0 obj
<<
/Producer (react-pdf)
/Creator (react-pdf)
/CreationDate (D:20150614221205Z)
>>
endobj
7 0 obj
<<
/Type /Font
/BaseFont /Helvetica
/Subtype /Type1
/Encoding /WinAnsiEncoding
>>
endobj
2 0 obj
<<
/Type /Catalog
/Pages 1 0 R
>>
endobj
1 0 obj
<<
/Type /Pages
/Count 1
/Kids [5 0 R]
>>
endobj
3 0 obj
<<
/Length 198
/Filter /FlateDecode
>>
stream
x���M
�0��s���i&���E�\\\\��či+����7��E	����7C(��/�&��j8��Iy޻r�%��ָ#YC�k<C��&��;YE\\"fF[C0#�m��v\\\\�!Jrl���]sŝ����5��C��(7h�0�d{��%���=����P-AxEFHVH��kPZ?��}��[���e~ޘK�>�w\`�[�
endstream
endobj
xref
0 12
0000000000 65535 f 
0000000794 00000 n 
0000000745 00000 n 
0000000851 00000 n 
0000000420 00000 n 
0000000294 00000 n 
0000000015 00000 n 
0000000648 00000 n 
0000000059 00000 n 
0000000137 00000 n 
0000000249 00000 n 
0000000549 00000 n 
trailer
<<
/Size 12
/Root 2 0 R
/Info 11 0 R
>>
startxref
1121
%%EOF
"
`;

exports[`<Link /> Should render inline Link at the start of a Text 1`] = `
"%PDF-1.3
%����
6 0 obj
<<
/Type /ExtGState
/ca 1
>>
endobj
7 0 obj
<<
/S /URI
/URI (http://www.github.com/diegomura/react-pdf)
>>
endobj
8 0 obj
<<
/Subtype /Link
/A 7 0 R
/Type /Annot
/Rect [0 825.24 27 841.89]
/Border [0 0 0]
>>
endobj
9 0 obj
<<
/Type /ExtGState
/CA 1
>>
endobj
5 0 obj
<<
/Type /Page
/Parent 1 0 R
/MediaBox [0 0 595.28 841.89]
/Contents 3 0 R
/Resources 4 0 R
/Annots [8 0 R]
>>
endobj
4 0 obj
<<
/ProcSet [/PDF /Text /ImageB /ImageC /ImageI]
/ExtGState <<
/Gs1 6 0 R
/Gs2 9 0 R
>>
/Font <<
/F1 10 0 R
>>
>>
endobj
11 0 obj
<<
/Producer (react-pdf)
/Creator (react-pdf)
/CreationDate (D:20150614221205Z)
>>
endobj
10 0 obj
<<
/Type /Font
/BaseFont /Helvetica
/Subtype /Type1
/Encoding /WinAnsiEncoding
>>
endobj
2 0 obj
<<
/Type /Catalog
/Pages 1 0 R
>>
endobj
1 0 obj
<<
/Type /Pages
/Count 1
/Kids [5 0 R]
>>
endobj
3 0 obj
<<
/Length 191
/Filter /FlateDecode
>>
stream
x���A�@���+��;���Bt�J��{�.�A\\"��o5	F10�}��
?3�+RD1��C�*WW�]��Zw�0k	/��O#��$�| �t��#�^%�����>��j��A�e13��
!Eh+8.�q�%��(Nh�����;���WF��B
��0s��W�{�k�Q^#.X5*���Xl
endstream
endobj
xref
0 12
0000000000 65535 f 
0000000783 00000 n 
0000000734 00000 n 
0000000840 00000 n 
0000000408 00000 n 
0000000282 00000 n 
0000000015 00000 n 
0000000059 00000 n 
0000000137 00000 n 
0000000238 00000 n 
0000000636 00000 n 
0000000537 00000 n 
trailer
<<
/Size 12
/Root 2 0 R
/Info 11 0 R
>>
startxref
1103
%%EOF
"
`;

exports[`<Link /> Should render inline Link in the middle of a Text 1`] = `
"%PDF-1.3
%����
6 0 obj
<<
/Type /ExtGState
/ca 1
>>
endobj
8 0 obj
<<
/S /URI
/URI (http://www.github.com/diegomura/react-pdf)
>>
endobj
9 0 obj
<<
/Subtype /Link
/A 8 0 R
/Type /Annot
/Rect [217.062 825.24 244.062 841.89]
/Border [0 0 0]
>>
endobj
10 0 obj
<<
/Type /ExtGState
/CA 1
>>
endobj
5 0 obj
<<
/Type /Page
/Parent 1 0 R
/MediaBox [0 0 595.28 841.89]
/Contents 3 0 R
/Resources 4 0 R
/Annots [9 0 R]
>>
endobj
4 0 obj
<<
/ProcSet [/PDF /Text /ImageB /ImageC /ImageI]
/ExtGState <<
/Gs1 6 0 R
/Gs2 10 0 R
>>
/Font <<
/F1 7 0 R
>>
>>
endobj
11 0 obj
<<
/Producer (react-pdf)
/Creator (react-pdf)
/CreationDate (D:20150614221205Z)
>>
endobj
7 0 obj
<<
/Type /Font
/BaseFont /Helvetica
/Subtype /Type1
/Encoding /WinAnsiEncoding
>>
endobj
2 0 obj
<<
/Type /Catalog
/Pages 1 0 R
>>
endobj
1 0 obj
<<
/Type /Pages
/Count 1
/Kids [5 0 R]
>>
endobj
3 0 obj
<<
/Length 208
/Filter /FlateDecode
>>
stream
x���M
�0��s���m&���E�\\\\��či+����7��?�	���/ɛ	�pc@n
ya���,����-Vi���b�=��ք��1��hl:��e�E�h*�g��)a=R�K-9�\\\\
���C}[+.���Ӝ��F�s�������l�>=d�I�Y�h����=�)�8�
�R��2��s酫7₷?��ū]���-��
endstream
endobj
xref
0 12
0000000000 65535 f 
0000000794 00000 n 
0000000745 00000 n 
0000000851 00000 n 
0000000420 00000 n 
0000000294 00000 n 
0000000015 00000 n 
0000000648 00000 n 
0000000059 00000 n 
0000000137 00000 n 
0000000249 00000 n 
0000000549 00000 n 
trailer
<<
/Size 12
/Root 2 0 R
/Info 11 0 R
>>
startxref
1131
%%EOF
"
`;

exports[`<Link /> Should render just a Link inside a Page 1`] = `
"%PDF-1.3
%����
6 0 obj
<<
/Type /ExtGState
/ca 1
>>
endobj
7 0 obj
<<
/S /URI
/URI (http://www.github.com/diegomura/react-pdf)
>>
endobj
8 0 obj
<<
/Subtype /Link
/A 7 0 R
/Type /Annot
/Rect [0 825.24 27 841.89]
/Border [0 0 0]
>>
endobj
9 0 obj
<<
/Type /ExtGState
/CA 1
>>
endobj
5 0 obj
<<
/Type /Page
/Parent 1 0 R
/MediaBox [0 0 595.28 841.89]
/Contents 3 0 R
/Resources 4 0 R
/Annots [8 0 R]
>>
endobj
4 0 obj
<<
/ProcSet [/PDF /Text /ImageB /ImageC /ImageI]
/ExtGState <<
/Gs1 6 0 R
/Gs2 9 0 R
>>
/Font <<
/F1 10 0 R
>>
>>
endobj
11 0 obj
<<
/Producer (react-pdf)
/Creator (react-pdf)
/CreationDate (D:20150614221205Z)
>>
endobj
10 0 obj
<<
/Type /Font
/BaseFont /Helvetica
/Subtype /Type1
/Encoding /WinAnsiEncoding
>>
endobj
2 0 obj
<<
/Type /Catalog
/Pages 1 0 R
>>
endobj
1 0 obj
<<
/Type /Pages
/Count 1
/Kids [5 0 R]
>>
endobj
3 0 obj
<<
/Length 146
/Filter /FlateDecode
>>
stream
x�mͱ
1�=O���^lA��A�M\\\\,U+}}S�� �~>�623�e椌Ő\`��u|�C<�=���=f�[�#W��E�E�%�Nq�	�E=��~����5�ƭQ�}�%$��
�%������~/}�L,<
endstream
endobj
xref
0 12
0000000000 65535 f 
0000000783 00000 n 
0000000734 00000 n 
0000000840 00000 n 
0000000408 00000 n 
0000000282 00000 n 
0000000015 00000 n 
0000000059 00000 n 
0000000137 00000 n 
0000000238 00000 n 
0000000636 00000 n 
0000000537 00000 n 
trailer
<<
/Size 12
/Root 2 0 R
/Info 11 0 R
>>
startxref
1058
%%EOF
"
`;

exports[`<Link /> Should render just a Link using ftp when given 1`] = `
"%PDF-1.3
%����
6 0 obj
<<
/Type /ExtGState
/ca 1
>>
endobj
7 0 obj
<<
/S /URI
/URI (ftp://www.github.com/diegomura/react-pdf)
>>
endobj
8 0 obj
<<
/Subtype /Link
/A 7 0 R
/Type /Annot
/Rect [0 825.24 27 841.89]
/Border [0 0 0]
>>
endobj
9 0 obj
<<
/Type /ExtGState
/CA 1
>>
endobj
5 0 obj
<<
/Type /Page
/Parent 1 0 R
/MediaBox [0 0 595.28 841.89]
/Contents 3 0 R
/Resources 4 0 R
/Annots [8 0 R]
>>
endobj
4 0 obj
<<
/ProcSet [/PDF /Text /ImageB /ImageC /ImageI]
/ExtGState <<
/Gs1 6 0 R
/Gs2 9 0 R
>>
/Font <<
/F1 10 0 R
>>
>>
endobj
11 0 obj
<<
/Producer (react-pdf)
/Creator (react-pdf)
/CreationDate (D:20150614221205Z)
>>
endobj
10 0 obj
<<
/Type /Font
/BaseFont /Helvetica
/Subtype /Type1
/Encoding /WinAnsiEncoding
>>
endobj
2 0 obj
<<
/Type /Catalog
/Pages 1 0 R
>>
endobj
1 0 obj
<<
/Type /Pages
/Count 1
/Kids [5 0 R]
>>
endobj
3 0 obj
<<
/Length 146
/Filter /FlateDecode
>>
stream
x�mͱ
1�=O���^lA��A�M\\\\,U+}}S�� �~>�623�e椌Ő\`��u|�C<�=���=f�[�#W��E�E�%�Nq�	�E=��~����5�ƭQ�}�%$��
�%������~/}�L,<
endstream
endobj
xref
0 12
0000000000 65535 f 
0000000782 00000 n 
0000000733 00000 n 
0000000839 00000 n 
0000000407 00000 n 
0000000281 00000 n 
0000000015 00000 n 
0000000059 00000 n 
0000000136 00000 n 
0000000237 00000 n 
0000000635 00000 n 
0000000536 00000 n 
trailer
<<
/Size 12
/Root 2 0 R
/Info 11 0 R
>>
startxref
1057
%%EOF
"
`;

exports[`<Link /> Should render just a Link using ftps when given 1`] = `
"%PDF-1.3
%����
6 0 obj
<<
/Type /ExtGState
/ca 1
>>
endobj
7 0 obj
<<
/S /URI
/URI (ftps://www.github.com/diegomura/react-pdf)
>>
endobj
8 0 obj
<<
/Subtype /Link
/A 7 0 R
/Type /Annot
/Rect [0 825.24 27 841.89]
/Border [0 0 0]
>>
endobj
9 0 obj
<<
/Type /ExtGState
/CA 1
>>
endobj
5 0 obj
<<
/Type /Page
/Parent 1 0 R
/MediaBox [0 0 595.28 841.89]
/Contents 3 0 R
/Resources 4 0 R
/Annots [8 0 R]
>>
endobj
4 0 obj
<<
/ProcSet [/PDF /Text /ImageB /ImageC /ImageI]
/ExtGState <<
/Gs1 6 0 R
/Gs2 9 0 R
>>
/Font <<
/F1 10 0 R
>>
>>
endobj
11 0 obj
<<
/Producer (react-pdf)
/Creator (react-pdf)
/CreationDate (D:20150614221205Z)
>>
endobj
10 0 obj
<<
/Type /Font
/BaseFont /Helvetica
/Subtype /Type1
/Encoding /WinAnsiEncoding
>>
endobj
2 0 obj
<<
/Type /Catalog
/Pages 1 0 R
>>
endobj
1 0 obj
<<
/Type /Pages
/Count 1
/Kids [5 0 R]
>>
endobj
3 0 obj
<<
/Length 146
/Filter /FlateDecode
>>
stream
x�mͱ
1�=O���^lA��A�M\\\\,U+}}S�� �~>�623�e椌Ő\`��u|�C<�=���=f�[�#W��E�E�%�Nq�	�E=��~����5�ƭQ�}�%$��
�%������~/}�L,<
endstream
endobj
xref
0 12
0000000000 65535 f 
0000000783 00000 n 
0000000734 00000 n 
0000000840 00000 n 
0000000408 00000 n 
0000000282 00000 n 
0000000015 00000 n 
0000000059 00000 n 
0000000137 00000 n 
0000000238 00000 n 
0000000636 00000 n 
0000000537 00000 n 
trailer
<<
/Size 12
/Root 2 0 R
/Info 11 0 R
>>
startxref
1058
%%EOF
"
`;

exports[`<Link /> Should render just a Link using http 1`] = `
"%PDF-1.3
%����
6 0 obj
<<
/Type /ExtGState
/ca 1
>>
endobj
7 0 obj
<<
/S /URI
/URI (http://www.github.com/diegomura/react-pdf)
>>
endobj
8 0 obj
<<
/Subtype /Link
/A 7 0 R
/Type /Annot
/Rect [0 825.24 27 841.89]
/Border [0 0 0]
>>
endobj
9 0 obj
<<
/Type /ExtGState
/CA 1
>>
endobj
5 0 obj
<<
/Type /Page
/Parent 1 0 R
/MediaBox [0 0 595.28 841.89]
/Contents 3 0 R
/Resources 4 0 R
/Annots [8 0 R]
>>
endobj
4 0 obj
<<
/ProcSet [/PDF /Text /ImageB /ImageC /ImageI]
/ExtGState <<
/Gs1 6 0 R
/Gs2 9 0 R
>>
/Font <<
/F1 10 0 R
>>
>>
endobj
11 0 obj
<<
/Producer (react-pdf)
/Creator (react-pdf)
/CreationDate (D:20150614221205Z)
>>
endobj
10 0 obj
<<
/Type /Font
/BaseFont /Helvetica
/Subtype /Type1
/Encoding /WinAnsiEncoding
>>
endobj
2 0 obj
<<
/Type /Catalog
/Pages 1 0 R
>>
endobj
1 0 obj
<<
/Type /Pages
/Count 1
/Kids [5 0 R]
>>
endobj
3 0 obj
<<
/Length 146
/Filter /FlateDecode
>>
stream
x�mͱ
1�=O���^lA��A�M\\\\,U+}}S�� �~>�623�e椌Ő\`��u|�C<�=���=f�[�#W��E�E�%�Nq�	�E=��~����5�ƭQ�}�%$��
�%������~/}�L,<
endstream
endobj
xref
0 12
0000000000 65535 f 
0000000783 00000 n 
0000000734 00000 n 
0000000840 00000 n 
0000000408 00000 n 
0000000282 00000 n 
0000000015 00000 n 
0000000059 00000 n 
0000000137 00000 n 
0000000238 00000 n 
0000000636 00000 n 
0000000537 00000 n 
trailer
<<
/Size 12
/Root 2 0 R
/Info 11 0 R
>>
startxref
1058
%%EOF
"
`;

exports[`<Link /> Should render just a Link using http when given 1`] = `
"%PDF-1.3
%����
6 0 obj
<<
/Type /ExtGState
/ca 1
>>
endobj
7 0 obj
<<
/S /URI
/URI (http://www.github.com/diegomura/react-pdf)
>>
endobj
8 0 obj
<<
/Subtype /Link
/A 7 0 R
/Type /Annot
/Rect [0 825.24 27 841.89]
/Border [0 0 0]
>>
endobj
9 0 obj
<<
/Type /ExtGState
/CA 1
>>
endobj
5 0 obj
<<
/Type /Page
/Parent 1 0 R
/MediaBox [0 0 595.28 841.89]
/Contents 3 0 R
/Resources 4 0 R
/Annots [8 0 R]
>>
endobj
4 0 obj
<<
/ProcSet [/PDF /Text /ImageB /ImageC /ImageI]
/ExtGState <<
/Gs1 6 0 R
/Gs2 9 0 R
>>
/Font <<
/F1 10 0 R
>>
>>
endobj
11 0 obj
<<
/Producer (react-pdf)
/Creator (react-pdf)
/CreationDate (D:20150614221205Z)
>>
endobj
10 0 obj
<<
/Type /Font
/BaseFont /Helvetica
/Subtype /Type1
/Encoding /WinAnsiEncoding
>>
endobj
2 0 obj
<<
/Type /Catalog
/Pages 1 0 R
>>
endobj
1 0 obj
<<
/Type /Pages
/Count 1
/Kids [5 0 R]
>>
endobj
3 0 obj
<<
/Length 146
/Filter /FlateDecode
>>
stream
x�mͱ
1�=O���^lA��A�M\\\\,U+}}S�� �~>�623�e椌Ő\`��u|�C<�=���=f�[�#W��E�E�%�Nq�	�E=��~����5�ƭQ�}�%$��
�%������~/}�L,<
endstream
endobj
xref
0 12
0000000000 65535 f 
0000000783 00000 n 
0000000734 00000 n 
0000000840 00000 n 
0000000408 00000 n 
0000000282 00000 n 
0000000015 00000 n 
0000000059 00000 n 
0000000137 00000 n 
0000000238 00000 n 
0000000636 00000 n 
0000000537 00000 n 
trailer
<<
/Size 12
/Root 2 0 R
/Info 11 0 R
>>
startxref
1058
%%EOF
"
`;

exports[`<Link /> Should render just a Link using https when given 1`] = `
"%PDF-1.3
%����
6 0 obj
<<
/Type /ExtGState
/ca 1
>>
endobj
7 0 obj
<<
/S /URI
/URI (https://www.github.com/diegomura/react-pdf)
>>
endobj
8 0 obj
<<
/Subtype /Link
/A 7 0 R
/Type /Annot
/Rect [0 825.24 27 841.89]
/Border [0 0 0]
>>
endobj
9 0 obj
<<
/Type /ExtGState
/CA 1
>>
endobj
5 0 obj
<<
/Type /Page
/Parent 1 0 R
/MediaBox [0 0 595.28 841.89]
/Contents 3 0 R
/Resources 4 0 R
/Annots [8 0 R]
>>
endobj
4 0 obj
<<
/ProcSet [/PDF /Text /ImageB /ImageC /ImageI]
/ExtGState <<
/Gs1 6 0 R
/Gs2 9 0 R
>>
/Font <<
/F1 10 0 R
>>
>>
endobj
11 0 obj
<<
/Producer (react-pdf)
/Creator (react-pdf)
/CreationDate (D:20150614221205Z)
>>
endobj
10 0 obj
<<
/Type /Font
/BaseFont /Helvetica
/Subtype /Type1
/Encoding /WinAnsiEncoding
>>
endobj
2 0 obj
<<
/Type /Catalog
/Pages 1 0 R
>>
endobj
1 0 obj
<<
/Type /Pages
/Count 1
/Kids [5 0 R]
>>
endobj
3 0 obj
<<
/Length 146
/Filter /FlateDecode
>>
stream
x�mͱ
1�=O���^lA��A�M\\\\,U+}}S�� �~>�623�e椌Ő\`��u|�C<�=���=f�[�#W��E�E�%�Nq�	�E=��~����5�ƭQ�}�%$��
�%������~/}�L,<
endstream
endobj
xref
0 12
0000000000 65535 f 
0000000784 00000 n 
0000000735 00000 n 
0000000841 00000 n 
0000000409 00000 n 
0000000283 00000 n 
0000000015 00000 n 
0000000059 00000 n 
0000000138 00000 n 
0000000239 00000 n 
0000000637 00000 n 
0000000538 00000 n 
trailer
<<
/Size 12
/Root 2 0 R
/Info 11 0 R
>>
startxref
1059
%%EOF
"
`;

exports[`<Link /> Should render just a Link using mailto when given 1`] = `
"%PDF-1.3
%����
6 0 obj
<<
/Type /ExtGState
/ca 1
>>
endobj
7 0 obj
<<
/S /URI
/URI (mailto://www.github.com/diegomura/react-pdf)
>>
endobj
8 0 obj
<<
/Subtype /Link
/A 7 0 R
/Type /Annot
/Rect [0 825.24 27 841.89]
/Border [0 0 0]
>>
endobj
9 0 obj
<<
/Type /ExtGState
/CA 1
>>
endobj
5 0 obj
<<
/Type /Page
/Parent 1 0 R
/MediaBox [0 0 595.28 841.89]
/Contents 3 0 R
/Resources 4 0 R
/Annots [8 0 R]
>>
endobj
4 0 obj
<<
/ProcSet [/PDF /Text /ImageB /ImageC /ImageI]
/ExtGState <<
/Gs1 6 0 R
/Gs2 9 0 R
>>
/Font <<
/F1 10 0 R
>>
>>
endobj
11 0 obj
<<
/Producer (react-pdf)
/Creator (react-pdf)
/CreationDate (D:20150614221205Z)
>>
endobj
10 0 obj
<<
/Type /Font
/BaseFont /Helvetica
/Subtype /Type1
/Encoding /WinAnsiEncoding
>>
endobj
2 0 obj
<<
/Type /Catalog
/Pages 1 0 R
>>
endobj
1 0 obj
<<
/Type /Pages
/Count 1
/Kids [5 0 R]
>>
endobj
3 0 obj
<<
/Length 146
/Filter /FlateDecode
>>
stream
x�mͱ
1�=O���^lA��A�M\\\\,U+}}S�� �~>�623�e椌Ő\`��u|�C<�=���=f�[�#W��E�E�%�Nq�	�E=��~����5�ƭQ�}�%$��
�%������~/}�L,<
endstream
endobj
xref
0 12
0000000000 65535 f 
0000000785 00000 n 
0000000736 00000 n 
0000000842 00000 n 
0000000410 00000 n 
0000000284 00000 n 
0000000015 00000 n 
0000000059 00000 n 
0000000139 00000 n 
0000000240 00000 n 
0000000638 00000 n 
0000000539 00000 n 
trailer
<<
/Size 12
/Root 2 0 R
/Info 11 0 R
>>
startxref
1060
%%EOF
"
`;
